fixed formatting and spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,14 +11,80 @@ h1 {
     text-align: center;
 }
 
+.bi-cloud {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.city-select{
+    background-color: rgb(197, 254, 234);
+    grid-column: 5 / 6;
+    grid-row: 3 / 4; 
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 0.5fr 0.2fr 0.5fr 0.2fr 0.5fr;
+    grid-template-rows: 0.1fr 0.1fr 0.15fr 0.33fr 1.55fr
+}
+
+.heading {
+    margin-top: 50px;
+    grid-column: 1 / 6;
+    grid-row: 1 / 2;
+}
+
+.label {
+    margin-top: 20px;
+}
+
+.sky-choice {
+    margin-top: 20px;
+}
+
+.sky-level {
+    background-color: rgb(194, 255, 254);
+    grid-column: 3 / 4; 
+    grid-row: 3 / 4;
+}
+
+.temp-default {
+    background-color: rgb(254, 254, 178);
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+.weather-landscape{
+    background-color: white;
+    grid-column: 2 / 5;
+    grid-row: 5 / 6;
+}
+
 #city-display {
     text-align: center;
     font-size: 35px;
 }
 
-.bi-cloud {
-    margin-left: 20px;
-    margin-right: 20px;
+#coldTemp {
+    background-color: rgb(183, 251, 183);
+}
+
+#hotTemp {
+    background-color: rgb(255, 204, 162);
+}
+
+#landscape {
+    font-size: 30px;
+    margin-top: 30px;
+}
+
+#normalTemp {
+    background-color: rgb(254, 254, 178);
+}
+
+#sky {
+    margin-top: 30px;
+    font-size: 25px;
 }
 
 #sky-img-1 {
@@ -32,76 +98,11 @@ h1 {
     margin-top: 15px;
     margin-right: 40px;
 }
-.container {
-    display: grid;
-    grid-template-columns: 0.5fr 0.2fr 0.5fr 0.2fr 0.5fr;
-    grid-template-rows: 0.1fr 0.1fr 0.1fr 0.33fr 1.54fr
-}
-
-.heading {
-    margin-top: 50px;
-    grid-column: 1 / 6;
-    grid-row: 1 / 2;
-}
-
-.temp-default {
-    background-color: rgb(254, 254, 178);
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
-}
-
-.label {
-    margin-top: 20px;
-}
-
-.sky-level {
-    background-color: rgb(194, 255, 254);
-    grid-column: 3 / 4; 
-    grid-row: 3 / 4;
-}
-
-.sky-choice {
-    margin-top: 20px;
-}
-
-.city-select{
-    background-color: rgb(197, 254, 234);
-    grid-column: 5 / 6;
-    grid-row: 3 / 4; 
-}
-
-.weather-landscape{
-    background-color: white;
-    grid-column: 2 / 5;
-    grid-row: 5 / 6;
-}
 
 #veryColdTemp {
     background-color: rgb(189, 246, 246);
 }
 
-#coldTemp {
-    background-color: rgb(183, 251, 183);
-}
-
-#normalTemp {
-    background-color: rgb(254, 254, 178);
-}
-
 #veryHotTemp {
     background-color: rgb(250, 176, 176);
-}
-
-#hotTemp {
-    background-color: rgb(255, 204, 162);
-}
-
-#sky {
-    margin-top: 30px;
-    font-size: 25px;
-}
-
-#landscape {
-    font-size: 30px;
-    margin-top: 30px;
 }
